$NetBSD: CHANGES-2022,v 1.500 2022/01/29 14:55:19 sjmulder Exp $

Changes to the packages collection and infrastructure in 2022:

	Updated www/grafana to 8.3.3 [triaxx 2022-01-01]
	Updated sysutils/py-ptyprocess to 0.7.0nb1 [martin 2022-01-01]
	Updated pkgtools/pkglint to 21.4.1 [rillig 2022-01-01]
	Updated pkgtools/lintpkgsrc to 4.97 [rillig 2022-01-01]
	Updated pkgtools/url2pkg to 21.4.0 [rillig 2022-01-01]
	Updated pkgtools/url2pkg to 21.4.1 [rillig 2022-01-01]
	Updated devel/mold to 1.0.1 [fcambus 2022-01-01]
	Updated net/dbip-asn-lite to 2022.01 [fcambus 2022-01-01]
	Updated net/dbip-city-lite to 2022.01 [fcambus 2022-01-01]
	Updated devel/py-backcall to 0.2.0nb1 [ryoon 2022-01-01]
	Updated net/dbip-country-lite to 2022.01 [fcambus 2022-01-01]
	Updated devel/py-testpath to 0.3.1nb1 [ryoon 2022-01-01]
	Updated devel/py-entrypoints to 0.3nb1 [ryoon 2022-01-01]
	Updated devel/py-traitlets to 5.1.1nb1 [ryoon 2022-01-01]
	Updated devel/py-ipython to 7.30.1nb1 [ryoon 2022-01-01]
	Updated devel/py-ipython_genutils to 0.2.0nb2 [ryoon 2022-01-01]
	Updated math/py-gmpy to 1.17nb1 [ryoon 2022-01-01]
	Updated net/sslh to 1.22c [rhialto 2022-01-01]
	Updated comms/gkermit to 2.01 [rhialto 2022-01-01]
	Updated archivers/lha to 114.9.20211125 [rhialto 2022-01-01]
	Updated sysutils/tealdeer to 1.5.0 [bsiegert 2022-01-01]
	Updated sysutils/mtools to 4.0.36 [rhialto 2022-01-01]
	Updated sysutils/broot to 1.8.1 [pin 2022-01-01]
	Updated textproc/csview to 0.3.12 [pin 2022-01-01]
	Updated www/hackernews-tui to 0.9.0 [pin 2022-01-01]
	Updated shells/nushell to 0.42.0 [pin 2022-01-01]
	Updated textproc/xapian to 1.4.19 [schmonz 2022-01-02]
	Updated textproc/xapian-omega to 1.4.19 [schmonz 2022-01-02]
	Updated www/py-curl to 7.44.1nb3 [ryoon 2022-01-02]
	Updated textproc/py-pandocfilters to 1.4.3nb1 [ryoon 2022-01-02]
	Updated geography/py-googlemaps to 4.5.3 [kleink 2022-01-02]
	Updated devel/byacc to 20220101 [fcambus 2022-01-02]
	Updated chat/py-xmpppy to 0.7.0 [gdt 2022-01-02]