@@ -1,4 +1,4 @@
-# $NetBSD: versioned_dependencies.mk,v 1.61 2022/01/29 08:42:50 wiz Exp $
+# $NetBSD: versioned_dependencies.mk,v 1.62 2022/01/29 21:46:17 wiz Exp $
 #
 # This file determines which separate distribution of a Python
 # package is used as dependency, depending on the Python version
@@ -9,7 +9,7 @@
 # PYTHON_VERSIONED_DEPENDENCIES
 #       The Python package which should be added as a dependency.
 #
-#       Possible values: Pmw Pillow X cairo flake8 html2text hypothesis importlib-metadata ipython jsonlib markdown more-itertools pip packaging pygments pyparsing python-digest rsa setuptools setuptools_scm sphinx test testtools zipp
+#       Possible values: Pmw Pillow X cairo flake8 html2text hypothesis importlib-metadata ipython markdown more-itertools pip packaging pygments pyparsing python-digest rsa setuptools setuptools_scm sphinx test testtools zipp
 #       Default: (nothing)
 #
 
@@ -29,7 +29,6 @@ _SUPPORTED_PACKAGES+=	hypothesis devel/py-hypothesis4 devel/py-hypothesis
 _SUPPORTED_PACKAGES+=	importlib-metadata devel/py-importlib-metadata2 devel/py-importlib-metadata
 _SUPPORTED_PACKAGES+=	ipython devel/py-ipython5 devel/py-ipython
 _SUPPORTED_PACKAGES+=	isort devel/py-isort4 devel/py-isort
-_SUPPORTED_PACKAGES+=	jsonlib textproc/py-jsonlib textproc/py-jsonlib3
 _SUPPORTED_PACKAGES+=	markdown textproc/py-markdown3 textproc/py-markdown
 _SUPPORTED_PACKAGES+=	more-itertools devel/py-more-itertools2 devel/py-more-itertools
 _SUPPORTED_PACKAGES+=	packaging devel/py-packaging2 devel/py-packaging
