@@ -1,9 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2010/02/12 08:58:34 wiz Exp $
-${PYSITELIB}/_jsonlib.so
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/jsonlib.py
-${PYSITELIB}/jsonlib.pyc
-${PYSITELIB}/jsonlib.pyo
