@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.500 2022/01/29 14:55:19 sjmulder Exp $
+$NetBSD: CHANGES-2022,v 1.501 2022/01/29 21:46:17 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -659,3 +659,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated mail/roundcube-plugin-password to 1.5.2 [taca 2022-01-29]
 	Updated mail/roundcube-plugin-zipdownload to 1.5.2 [taca 2022-01-29]
 	Updated math/bcal to 2.4 [sjmulder 2022-01-29]
+	Removed textproc/py-jsonlib [wiz 2022-01-29]
